azure-kubernetes-service/resources/gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asc-scg-default
    app.kubernetes.io/part-of: spring-cloud-gateway
    gateway.name: asc-scg-default
    gateway.type: spring-cloud-gateway
  name: asc-scg-default
spec:
  minReadySeconds: 5
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: asc-scg-default
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8090"
        prometheus.io/scrape: "true"
      labels:
        app: asc-scg-default
        app.kubernetes.io/part-of: spring-cloud-gateway
        gateway.name: asc-scg-default
        gateway.type: spring-cloud-gateway
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
            java.base/sun.security.x509=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
        - name: logging.level.sun.net.www.protocol.http.HttpURLConnection
          value: INFO
        image: acmeacr.azurecr.io/gateway:20241111
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: actuator/health/liveness
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        name: gateway
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: actuator/health/readiness
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: "2"
            memory: 2Gi
        securityContext: {}
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: actuator/health/readiness
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: asc-scg-default
    app.kubernetes.io/part-of: spring-cloud-gateway
    gateway.name: asc-scg-default
    gateway.type: spring-cloud-gateway
  name: asc-scg-default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-gateway
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: asc-scg-default
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://yuwzho-acme-kv.vault.azure.net/certificates/acme-tls
  name: httprule-runtime-scg-default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: asc-scg-fitness.yuwzho-acme.asc-test.net
    http:
      paths:
      - backend:
          service:
            name: asc-scg-default
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - asc-scg-fitness.yuwzho-acme.asc-test.net
    # Secret name should be the in patthen "keyvault-<metadata.name>"
    secretName: keyvault-httprule-runtime-scg-default
